--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,65 +9,68 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="347dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="176dp"
         android:text="Welcome to your Kitchen Kompanion"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="1dp" />
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="41dp" />
 
     <ImageButton
         android:id="@+id/imageButton4"
-        android:layout_width="87dp"
-        android:layout_height="81dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="101dp"
+        android:layout_height="91dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="436dp"
         android:adjustViewBounds="false"
         android:cropToPadding="false"
         android:onClick="openmain2"
         android:scaleType="fitStart"
-        app:layout_constraintStart_toEndOf="@+id/imageButton5"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/grocery_list_icon_25" />
 
     <ImageButton
         android:id="@+id/imageButton6"
-        android:layout_width="87dp"
-        android:layout_height="81dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="96dp"
+        android:layout_height="95dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="436dp"
         android:adjustViewBounds="false"
         android:cropToPadding="false"
         android:onClick="openmain2"
         android:scaleType="fitStart"
         app:layout_constraintStart_toEndOf="@+id/imageButton4"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/fridge_freezer" />
 
     <ImageButton
         android:id="@+id/imageButton7"
         android:layout_width="87dp"
-        android:layout_height="81dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="80dp"
+        android:layout_height="87dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="260dp"
         android:adjustViewBounds="false"
         android:cropToPadding="false"
         android:onClick="openmain2"
         android:scaleType="fitStart"
-        app:layout_constraintStart_toEndOf="@+id/imageButton6"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/imageButton5"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/kitchen_cabinet" />
 
     <ImageButton
         android:id="@+id/imageButton5"
-        android:layout_width="63dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="102dp"
+        android:layout_height="96dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="256dp"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:onClick="openmain3"
         android:scaleType="fitStart"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/chef_icon_png_13"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/chef_icon_png_13" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
