--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
@@ -13,19 +13,23 @@
         android:id="@+id/imageView2"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="224dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="247dp"
+        android:onClick="Shopping"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         app:srcCompat="@drawable/chart" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginTop="224dp"
-        android:layout_marginEnd="56dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="247dp"
+        android:layout_marginEnd="55dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cab" />
@@ -34,8 +38,12 @@
         android:id="@+id/imageView4"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="72dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="420dp"
+        android:layout_marginEnd="224dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:srcCompat="@drawable/fridge" />
@@ -44,8 +52,10 @@
         android:id="@+id/imageView5"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="56dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="420dp"
+        android:layout_marginEnd="55dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:srcCompat="@drawable/recipe" />
@@ -54,12 +64,15 @@
         android:id="@+id/textView"
         android:layout_width="250dp"
         android:layout_height="88dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="109dp"
+        android:layout_marginEnd="73dp"
         android:text="Welcome to the kitchen KompanionApp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
