--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -37,7 +37,7 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="66dp"
         android:layout_height="40dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="56dp"
         android:ems="10"
         android:hint="Price"
@@ -49,7 +49,7 @@
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="56dp"
         android:ems="10"
         android:hint="Qty"
@@ -57,18 +57,21 @@
         app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/lv"
-        android:layout_width="410dp"
-        android:layout_height="642dp"
-        android:layout_marginBottom="44dp"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
+    <LinearLayout
+        android:layout_width="406dp"
+        android:layout_height="574dp"
+        android:layout_marginTop="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="162dp">
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">
 
-    </ListView>
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/lv"/>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
