--- a/app/src/main/res/layout/lst.xml
+++ b/app/src/main/res/layout/lst.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#16a307"
+        android:background="#bf4215"
         android:orientation="horizontal">
 
         <TextView
