--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -13,24 +13,57 @@
         android:layout_height="100dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
-
-    <ListView
-        android:id="@+id/listview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName" />
+        android:orientation="horizontal"
+        android:id="@+id/buttons"
+        tools:ignore="MissingConstraints">
 
-    <ListView
-        android:id="@+id/cabinetview"
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="All"
+            android:id="@+id/all"
+            android:onClick="filterAll"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:id="@+id/fridge"
+            android:text="Fridge"
+            android:onClick="filterFridge"/>
+
+        <Button
+            android:id="@+id/cabinet"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="filterCabinet"
+            android:text="Cabinet" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName" />
+        android:layout_height="0dp"
+        android:id="@+id/container"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintTop_toBottomOf="@id/buttons"
+        >
 
-    <!--tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="672dp"-->
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:stackFromBottom="true"
+            />
 
+    </LinearLayout>
 
     <EditText
         android:id="@+id/editTextTextPersonName"
@@ -71,6 +104,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
