--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -49,10 +49,30 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="51dp"
+        app:layout_constraintTop_toBottomOf="@id/buttons"
+        android:id="@+id/label">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="22sp"
+            android:background="#003300"
+            android:text=" Product         Expiration        Quantity"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/container"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toBottomOf="@id/buttons"
+        app:layout_constraintTop_toBottomOf="@id/label"
         >
 
         <ListView
@@ -72,8 +92,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="20dp"
         android:ems="10"
-        android:hint="Enter a new item"
         android:inputType="textPersonName"
+        android:hint="Enter a new item"
+        android:textColorHint="@color/white"
+        app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -86,6 +108,8 @@
         android:layout_marginBottom="20dp"
         android:hint="Qty"
         android:minWidth="40dp"
+        android:textColorHint="@color/white"
+        app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
