--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/back"
     tools:context=".ChartActivity">
 
     <EditText
@@ -12,12 +12,13 @@
         android:layout_width="150dp"
         android:layout_height="45dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="260dp"
+        android:layout_marginEnd="250dp"
         android:ems="10"
         android:hint="Enter item name"
         android:inputType="textPersonName"
-        android:textColorHint="@color/black"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,22 +44,48 @@
         android:ems="10"
         android:hint="Qty"
         android:inputType="textPersonName"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/finish"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="120dp"
-        android:backgroundTint="#003300"
-        android:text="Finish Shopping"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/longpresshintparent">
+
+        <Button
+            android:id="@+id/finish"
+            android:layout_width="160dp"
+            android:layout_height="60dp"
+            android:backgroundTint="#003300"
+            android:text="Finish Shopping"
+            android:layout_centerInParent="true"
+            android:textColor="@color/white"
+            />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/longpresshintparent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/textView3">
+
+        <TextView
+            android:id="@+id/longpresshint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Long Press on items to Remove or Edit"
+            android:textSize="15dp"
+            android:textColor="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_centerInParent="true"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/lv"
@@ -78,9 +105,29 @@
         android:textColorHint="@color/white"
         android:textSize="25sp"
         android:background="#003300"
-        android:text=" Product Name                      Quantity"
+        android:gravity="center"
+        android:text=" Product Name                    Quantity"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/lv">
+
+        <TextView
+            android:id="@+id/removehint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="20dp"
+            android:text="Removed items can be loaded into inventory!"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </RelativeLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
