--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
@@ -92,6 +92,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/container"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
         app:layout_constraintTop_toBottomOf="@id/label"
         >
@@ -115,6 +116,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Enter a new item"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -130,6 +132,7 @@
         android:hint="Qty"
         android:minWidth="40dp"
         android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
